--- a/sampleapp-backend/package.json
+++ b/sampleapp-backend/package.json
@@ -4,16 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "backend": "npx nodemon --exec npx babel-node src/server.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
-    "@babel/preset-env": "^7.16.11"
+    "@babel/preset-env": "^7.16.11",
+    "nodemon": "^2.0.16"
   },
   "dependencies": {
-    "express": "^4.18.0"
+    "body-parser": "^1.20.0",
+    "express": "^4.18.0",
+    "mongodb": "^4.6.0"
   }
 }
